# COM6018

./: .gitignore  README.md  _config.yml  _toc.yml  intro.md  pyproject.toml
.github/workflows/: deploy-jupyter-book.yml
materials/lab_intros/: 010_lab_intro.html  020_lab_intro.html  030_lab_intro.html  040_lab_intro.html  050_lab_intro.html  070_lab_intro.html  080_lab_intro.html  090_lab_intro.html
materials/labs/: 000_Introduction.md  010_python_intro.ipynb  020_reading_data.ipynb  030_introducing_numpy.ipynb  040_working_with_pandas.ipynb  050_using_matplotlib.ipynb  070_introducing_scikit_learn.ipynb  080_classification_with_scikit_learn.ipynb  090_curve_fitting_with_scikit_learn.ipynb
materials/lectures/: 005_getting_started.html  010_welcome_to_COM6018.html  015_getting_set_up.html  020_reading_and_writing_data.html  030_introducing_numpy.html  040_introducing_pandas.html  050_introducing_matplotlib.html  070_introducing_scikitlearn.html  080_classification_with_scikitlearn.html  090_curve_fitting_with_scikitlearn.html
materials/solutions/: 000_Introduction.md  010_python_intro.ipynb  020_reading_data.ipynb  030_introducing_numpy.ipynb  040_working_with_pandas.ipynb  050_using_matplotlib.ipynb  070_introducing_scikit_learn.ipynb  080_classification_with_scikit_learn.ipynb  figures
materials/tutorials/: 000_Introduction.md  005_Setting_Up.md  010_Introducing_Python.ipynb  015_Further_Python.ipynb  020_Reading_Data.ipynb  025_Obtaining_Data_via_an_API.ipynb  030_Introducing_Numpy.ipynb  035_Some_Common_Problems.ipynb  040_Introducing_Pandas.ipynb  (+5 more)
(+23 files in other folders)
