[project]
name = "com6018"
version = "0.1.0"
description = "Materials for the COM6018 module"
readme = "README.md"
requires-python = ">=3.12.5"
dependencies = [
    "cartopy>=0.25.0",
    "ipykernel>=6.30.1",
    "jupyterlab>=4.4.7",
    "matplotlib>=3.10.6",
    "notebook>=7.4.5",
    "numpy>=2.1.1",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "xlrd>=2.0.2",
    "pyarrow>=21.0.0",
]
